src/objects/Patient_POT_Apt_Procedure__c.object
<CustomObject>
    <description>List of procedure to be performed during an appointment in a clinical patient POT.  This list is populated from an initial template selection and then can be customized by the doctor</description>
    <fields>
        <fullName>ADA_Code__c</fullName>
        <label>ADA Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Tooth_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Tooth Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Procedure</label>
        <referenceTo>Clinical_Procedure__c</referenceTo>
        <relationshipLabel>Patient POT Apt Procedures</relationshipLabel>
        <relationshipName>Patient_POT_Apt_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Fee__c</fullName>
        <label>Insurance Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Patient POT Apt Procedures</relationshipLabel>
        <relationshipName>Patient_POT_Apt_Procedures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Procedure_Description__c</fullName>
        <label>Procedure Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Teeth__c</fullName>
        <label>Target Teeth</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Required__c</fullName>
        <label>Time Required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Patient POT Apt Procedure</label>
    <nameField>
        <label>Patient POT Apt Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient POT Apt Procedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>